--- a/index.html
+++ b/index.html
@@ -4,88 +4,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Active Minds Society</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Raleway:wght@600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-  <script src="js/script.js"></script>
 </head>
 <body>
-<nav class="navbar">
-  <div class="logo">Active Minds Society</div>
-
-  <!-- Hamburger Icon -->
-  <div class="menu-toggle" id="menu-toggle">
-    <span></span>
-    <span></span>
-    <span></span>
-  </div>
-
-  <!-- Navbar Links -->
-  <ul class="nav-links" id="nav-links">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About Us</a></li>
-    <li><a href="programmes.html">Our Programmes</a></li>
-    <li><a href="team.html">Meet the Team</a></li>
-    <li><a href="partners.html">Partners</a></li>
-    <li><a href="support.html">Support Us</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
+  <!-- Navbar -->
+  <header>
+    <nav class="navbar">
+      <div class="logo">Active Minds Society</div>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="programmes.html">Our Programmes</a></li>
+        <li><a href="team.html">Meet the Team</a></li>
+        <li><a href="partners.html">Partners</a></li>
+        <li><a href="support.html">Support Us</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
   <!-- Hero Section -->
   <section class="hero">
     <h1>Empowering Youth Through Education & Sports</h1>
     <p>Active Minds Society creates opportunities for young people in Durban’s communities.</p>
     <a href="support.html" class="btn">Get Involved</a>
-    <br>
-    <a href="support.html" class="btn secondary">Donate</a>
-
   </section>
-
-  <!--About-preview-->>
-  <section class="about-preview">
-  <h2>Who We Are</h2>
-  <p>Active Minds Society is a youth-driven organisation in Durban focused on empowering young people through swimming, education, and fitness initiatives. We create opportunities that transform communities.</p>
-  <br>
-  <a href="about.html" class="btn">Learn More</a>
-  </section>
-<br>
-
-<!--Statistics-->
-<section class="impact">
-  <h2>Our Impact</h2>
-  <div class="impact-cards">
-    <div class="impact-card">
-      <h3>150+</h3>
-      <p>Youth Trained in Swimming</p>
-    </div>
-    <div class="impact-card">
-      <h3>20+</h3>
-      <p>Workshops Hosted</p>
-    </div>
-    <div class="impact-card">
-      <h3>500+</h3>
-      <p>Community Members Reached</p>
-    </div>
-  </div>
-</section>
-
-<!--Image Gallery-->
-<section class="gallery">
-  <h2>In Action</h2>
-  <div class="gallery-container">
-    <img src="assest/Swim Training.jpg" alt="Swim Training">
-    <img src="assest/Workshops.jpg" alt="Workshop">
-    <img src="assest/Fitness event.jpg" alt="Fitness Event">
-  </div>
-</section>
-
-<!-- Partners Preview-->
-<section class="partners-preview">
-  <h2>Our Partners</h2>
-  <p>We work with schools, NGOs, and local organisations to make change possible.</p>
-  <a href="partners.html" class="btn">See Our Partners</a>
-</section>
-
 
   <!-- Programmes Preview -->
   <section class="programmes">
@@ -105,22 +48,6 @@
       </div>
     </div>
   </section>
-  
-<!-- NewsLetter -->  
-<section class="newsletter">
-  <h2>Stay Connected</h2>
-  <p>Subscribe to stay updated on our community programmes, upcoming events, and opportunities to get involved.</p>
-  
-  <form id="newsletter-form">
-    <input type="email" id="newsletter-email" placeholder="Enter your email" required>
-    <button type="submit">Subscribe</button>
-  </form>
-  
-  <!-- Success Message -->
-  <p id="newsletter-message" class="success" style="display:none;">
-    Thank you for subscribing! You’ll now receive updates from Active Minds Society.
-  </p>
-</section>
 
   <!-- Footer -->
   <footer>
@@ -131,8 +58,5 @@
       <a href="https://www.linkedin.com/company/active-minds-society/">LinkedIn</a>
     </div>
   </footer>
-
-  <!-- JS for Hamburger -->
-  <script src="js/script.js"></script>
 </body>
 </html>
